[#68935222] Add min-width to the body tag in order to prevent layout issues.

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -36,7 +36,11 @@
     color: white
   h1
     margin: 1em 0
-@media screen and (max-width: 700px) 
+@media screen and (max-width: 900px) 
+  body
+    min-width: 520px !important
+  .meurio
+    display: none
   .screen1, .screen3, .screen5
     background: lighten($olive, 2%) image-url('pattern-dots_68a612.png') !important
   .screen2, .screen4
